--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -3,7 +3,7 @@
     <div class="container">
       <a class="navbar-brand" href="#">HookUp</a>
      
-        <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="loggedIn">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$ | async">
           <li class="nav-item">
             <a class="nav-link " href="#">Matches</a>
           </li>
@@ -17,14 +17,14 @@
             <a class="nav-link " (click)="Logout">Logout</a>
           </li>
         </ul>
-        <div class="dropdown" *ngIf="loggedIn" dropdown>
+        <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
           <a  class="dropdown-toggle text-light" dropdownToggle>Welcome User</a>
           <div class="dropdown-menu mt-3" *dropdownMenu> 
             <a  class="dropdown-item">Edit Profile</a>
             <a  class="dropdown-item" (click)="Logout">Logout</a>           
           </div>          
         </div>
-        <form *ngIf="!loggedIn" #loginForm="ngForm" class="d-flex" (ngSubmit) = "Login()" autocomplete="off" >
+        <form *ngIf="!(accountService.currentUser$ | async)" #loginForm="ngForm" class="d-flex" (ngSubmit) = "Login()" autocomplete="off" >
           <input
           name="userName"
           [(ngModel)]="model.username"
