--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -4,7 +4,7 @@
         <p class="lead">All you need to do is sign up</p>
         <div class="text-center">
             <button (click)="registerToggle()" class="btn btn-primary btn-lg">Register</button>
-            <button class="btn btn-info btn-lg  ">More Info</button>
+            <button class="btn btn-info btn-lg ml-2">More Info</button>
         </div>
     </div>
 
