--- a/client/src/app/_forms/text-input/text-input.component.html
+++ b/client/src/app/_forms/text-input/text-input.component.html
@@ -1,21 +1,16 @@
 <div class="mb-3">
-    <input type={{type}}
-    [class.is-invalid] = "control.touched && control.invalid"
-    class="form-control"
-    [formControl]="control"
-    formControlName="confirmPassword"
-    placeholder={{label}}
-    >
+    <input type={{type}} [class.is-invalid]="control.touched && control.invalid" class="form-control"
+        [formControl]="control" placeholder={{label}}>
     <div class="invalid-feedback" *ngIf="control.errors?.['required']">
-        Please enter a {{label}
+        Please enter a {{label}}
     </div>
     <div class="invalid-feedback" *ngIf="control.errors?.['minlength']">
-         {{label}} must be at least {{control.errors?.['minlength'].requiredLength}} characters
+        {{label}} must be at least {{control.errors?.['minlength'].requiredLength}} characters
     </div>
     <div class="invalid-feedback" *ngIf="control.errors?.['maxlength']">
         {{label}} must be at most {{control.errors?.['maxlength'].requiredLength}} characters
-   </div>
-   <div class="invalid-feedback" *ngIf="control.errors?.['notmatch']">
-    Passwords do not match
-</div>
+    </div>
+    <div class="invalid-feedback" *ngIf="control.errors?.['notMatching']">
+        Passwords do not match
+    </div>
 </div>
