--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -2,38 +2,26 @@
     <h2 class="text-center text-primary">Sign up</h2>
     <hr>
     <div class="mb-3">
-        <label style="margin-left: 10px;">I am a:
-            <input type="radio" class="form-check-input" value="male" formControlName="gender">male
+        <label style="margin-right: 10px;">I am a:
+            <input type="radio" class="form-check-input" value="male" formControlName="gender">Male
+            <input type="radio" class="form-check-input ms-3" value="female" formControlName="gender">Female
         </label>
-        <label style="margin-left: 10px;">I am a:
-            <input type="radio" class="form-check-input ms-3" value="female" formControlName="gender">female
-        </label>
+
     </div>
-    <app-text-input [formControl]="$any(registerForm.controls['username'])" 
-     [label] = "'userName'"></app-text-input>
-     <app-text-input [formControl]="$any(registerForm.controls['knownAs'])" 
-     [label] = "'Known As'"></app-text-input>
-     <app-date-picker [formControl]="$any(registerForm.controls['dateOfBirth'])" 
-     [label] = "'Date Of Birth'" [maxDate]="maxDate"></app-date-picker>
-     <app-text-input [formControl]="$any(registerForm.controls['city'])" 
-     [label] = "'City'"></app-text-input>
-     <app-text-input [formControl]="$any(registerForm.controls['country'])" 
-     [label] = "'Country'"></app-text-input>
-    <app-text-input [formControl]="$any(registerForm.controls['password'])"  
-    [label] = "'Password'" [type]="'password'"></app-text-input>
-    <app-text-input [formControl]="$any(registerForm.controls['confirmPassword'])" 
-     [label] = "'Confirm Password'"></app-text-input>
-     <div class="row" *ngIf="validationErrors">
-        <ul class="text-danger">
-            <li *ngFor="let error of validationErrors">
-                {{error}}
-            </li>
 
-        </ul>
+    <app-text-input [formControl]="$any(registerForm.controls['username'])" [label]="'User Name'"></app-text-input>
+    <app-text-input [formControl]="$any(registerForm.controls['knownAs'])" [label]="'Known As'"></app-text-input>
+    <app-date-picker [formControl]="$any(registerForm.controls['dateOfBirth'])" [label]="'Date Of Birth'"
+        [maxDate]="maxDate"></app-date-picker>
+    <app-text-input [formControl]="$any(registerForm.controls['city'])" [label]="'City'"></app-text-input>
+    <app-text-input [formControl]="$any(registerForm.controls['country'])" [label]="'Country'"></app-text-input>
+    <app-text-input [formControl]="$any(registerForm.controls['password'])" [label]="'Password'"
+        [type]="'password'"></app-text-input>
+    <app-text-input [formControl]="$any(registerForm.controls['confirmPassword'])" [label]="'Confirm Password'"
+        [type]="'password'"></app-text-input>
 
-     </div>
     <div class="text-center">
-        <button [disabled]="registerForm.valid" class="btn btn-success me-2" type="submit">Register</button>
-        <button class="btn btn-default" (click)="cancel()" >Cancel</button>
+        <button [disabled]="!registerForm.valid" class="btn btn-success me-2" type="submit">Register</button>
+        <button class="btn btn-default" (click)="cancel()">Cancel</button>
     </div>
 </form>
