--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -8,31 +8,32 @@
             </div>
         </div>
         <div class="card">
-            <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}" 
-            class="card-img-top img-thumbnail">
-    <div class="card-body">
-        <div>
-            <strong>Location:</strong>
-            <p> {{member.city}},  {{member.country}}</p>
-        </div>
-        <div>
-            <strong>Age:</strong>
-            <p> {{member.age}}</p>
-        </div>
-        <div>
-            <strong>Last Seen:</strong>
-            <p> {{member.lastActive}}</p>
-        </div>
-        <div>
-            <strong>Member Since:</strong>
-            <p> {{member.dateCreated}}</p>
-        </div>
-    </div>
-    <div class="card-footer">
-        
-        <button type="submit" [disabled]="!editForm.dirty" class="btn btn-success col-5" form="editForm">Save</button>
-     
-    </div>
+            <img src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}"
+                class="card-img-top img-thumbnail">
+            <div class="card-body">
+                <div>
+                    <strong>Location:</strong>
+                    <p> {{member.city}}, {{member.country}}</p>
+                </div>
+                <div>
+                    <strong>Age:</strong>
+                    <p> {{member.age}}</p>
+                </div>
+                <div>
+                    <strong>Last Seen:</strong>
+                    <p> {{member.lastActive + 'Z' | timeago}}</p>
+                </div>
+                <div>
+                    <strong>Member Since:</strong>
+                    <p> {{member.dateCreated | date}}</p>
+                </div>
+            </div>
+            <div class="card-footer">
+
+                <button type="submit" [disabled]="!editForm.dirty" class="btn btn-success col-5"
+                    form="editForm">Save</button>
+
+            </div>
 
         </div>
 
@@ -41,52 +42,41 @@
     <div class="col-8">
         <tabset class="member-tabset">
             <tab heading="About {{member.knownAs}}">
-               <form #editForm="ngForm" id ="editForm" (ngSubmit)="updateMember()">
-                <h4 class="mt-2">
-                    Description:
-                </h4>
-                <textarea class="form-control"
-                [(ngModel)]="member.intro"
-                name="intro"
-                rows="6"
-                ></textarea>
-                <h4 class="mt-2">
-                    Looking For:
-                </h4>
-                <textarea class="form-control"
-                [(ngModel)]="member.lookingFor"
-                name="lookingFor"
-                rows="6"
-                ></textarea>
-                <h4 class="mt-2">
-                    Interests:
-                </h4>
-                <textarea class="form-control"
-                [(ngModel)]="member.interests"
-                name="interests"
-                rows="6"
-                ></textarea>
+                <form #editForm="ngForm" id="editForm" (ngSubmit)="updateMember()">
+                    <h4 class="mt-2">
+                        Description:
+                    </h4>
+                    <textarea class="form-control" [(ngModel)]="member.intro" name="intro" rows="6"></textarea>
+                    <h4 class="mt-2">
+                        Looking For:
+                    </h4>
+                    <textarea class="form-control" [(ngModel)]="member.lookingFor" name="lookingFor"
+                        rows="6"></textarea>
+                    <h4 class="mt-2">
+                        Interests:
+                    </h4>
+                    <textarea class="form-control" [(ngModel)]="member.interests" name="interests" rows="6"></textarea>
 
-                <h4 class="mt-2">
-                    Location Details:
-                </h4>
-                <div class="d-flex flex-row align-items-center">
-                    <label for="city">City:</label>
-                    <input class="form-control"  type="text" name = "city" [(ngModel)]="member.city">
-                    <label for="country" >Country:</label>
-                    <input class="form-control"  type="text"  name = "country" [(ngModel)]="member.country">
-                    
-                </div>
-            
-               </form>
+                    <h4 class="mt-2">
+                        Location Details:
+                    </h4>
+                    <div class="d-flex flex-row align-items-center">
+                        <label for="city">City:</label>
+                        <input class="form-control" type="text" name="city" [(ngModel)]="member.city">
+                        <label for="country">Country:</label>
+                        <input class="form-control" type="text" name="country" [(ngModel)]="member.country">
+
+                    </div>
+
+                </form>
             </tab>
-        
+
             <tab heading="Edit Photos">
-             
-             <app-photo-editor [member]="member"></app-photo-editor>
-                
+
+                <app-photo-editor [member]="member"></app-photo-editor>
+
             </tab>
-          
+
         </tabset>
     </div>
 
