--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -1,5 +1,54 @@
+<div class="text-center mt-3">
+    <h2>Your matches - {{pagination?.totalItems}} found</h2>
+</div>
+
+<div class="container mt-3" *ngif="userParams">
+    <form #form="ngForm" class="d-flex mb-3" (ngSubmit)="loadMembers()" autocomplete="off">
+        <div class="d-flex mg-3">
+            <label class="col-form-label"> Age from: </label>
+            <input type="number" class="form-control ms-1" style="width: 70px;" name="minAge"
+                [ngModel]="userParams?.minAge!">
+        </div>
+        <div class="d-flex mg-3">
+            <label class="col-form-label"> Age to: </label>
+            <input type="number" class="form-control ms-1" style="width: 70px;" name="maxAge"
+                [ngModel]="userParams?.maxAge!">
+        </div>
+        <div class="d-flex px-2">
+            <label class="col-form-label me-2">Show:</label>
+            <select name="gender" style="width:130px" class="form-select ms-1" [ngModel]="userParams?.gender!">
+                <option *ngFor="let gender of genderList" [value]="gender.value">{{gender.display}}</option>
+            </select>
+        </div>
+        <button class="btn btn-primary ms-1">Apply filters</button>
+        <button (click)="resetFilters()" class="btn btn-info ms-1">Reset filters</button>
+
+        <div class="col">
+            <div class="btn-group foat-end">
+                <button class="btn btn-primary" type="button" class="btn btn-primary" name="orderBy"
+                    [ngModel]="userParams?.orderBy!" btnRadio="lastActive" (click)="loadMembers()">Last
+                    Active</button>
+
+                <button class="btn btn-primary" type="button" class="btn btn-primary" name="orderBy"
+                    [ngModel]="userParams?.orderBy!" btnRadio="created" (click)="loadMembers()">Newest
+                    Members</button>
+            </div>
+        </div>
+    </form>
+
+</div>
+
 <div class="row">
-    <div class="col-2" *ngFor="let member of members$ | async">{{member.knownAs}}
+    <div class="col-2" *ngFor="let member of members">{{member.knownAs}}
         <app-member-card [member]="member"></app-member-card>
+    </div>
+</div>
+
+<div class="d-flex justify-content-center" *ngIf="pagination">
+    <div class="col-xs-12 col-12">
+        <pagination [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itemsPerPage" [maxSize]="10"
+            [(ngModel)]="pagination.currentPage">
+
+        </pagination>
     </div>
 </div>
