--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,49 +1,39 @@
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
+  <div class="container">
+    <a class="navbar-brand" routerLink="/" routerLinkActive="active">HookUp</a>
 
-  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
-    <div class="container">
-      <a class="navbar-brand" routerLink="/" routerLinkActive="active">HookUp</a>
-     
 
-     
-        <ul class="navbar-nav me-auto mb-2 mb-md-0" >
-          <ng-container *ngIf="accountService.currentUser$ | async">
-                <li class="nav-item">
-                  <a class="nav-link " routerLink="/members" routerLinkActive="active">Matches</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link " routerLink="/messages" routerLinkActive="active">Mesages</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link " (click)="Logout">Logout</a>
-                </li>
-        </ng-container>
-        </ul>
-        <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
-          <img src="{{user.photoUrl || './assets/user.png'}}" alt="user photo">
-          <a  class="dropdown-toggle text-light ms-2" dropdownToggle>Welcome {{user.username | titlecase}}</a>
-          <div class="dropdown-menu mt-3" *dropdownMenu> 
-            <a  class="dropdown-item" routerLink="/member/edit">Edit Profile</a>
-            <a  class="dropdown-item" (click)="Logout()">Logout</a>           
-          </div>          
-        </div>
-        <form *ngIf="!(accountService.currentUser$ | async)" #loginForm="ngForm" class="d-flex" (ngSubmit) = "Login()" autocomplete="off" >
-          <input
-          name="userName"
-          [(ngModel)]="model.username"
-            class="form-control me-2"
-            type="text"
-             placeholder="Username" >
-          <input 
-          name="password"
-          [(ngModel)]="model.password"
-          class="form-control me-2" 
-          type="password" 
-          placeholder="Password" >
-          <button class="btn btn-success" type="submit">Login</button>
-        </form>
+
+    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+      <ng-container *ngIf="accountService.currentUser$ | async">
+        <li class="nav-item">
+          <a class="nav-link " routerLink="/members" routerLinkActive="active">Matches</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " routerLink="/messages" routerLinkActive="active">Mesages</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " (click)="Logout">Logout</a>
+        </li>
+      </ng-container>
+    </ul>
+    <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
+      <img src="{{user.photoUrl || './assets/user.png'}}" alt="user photo">
+      <a class="dropdown-toggle text-light ms-2" dropdownToggle>Welcome {{user.knownAs | titlecase}}</a>
+      <div class="dropdown-menu mt-3" *dropdownMenu>
+        <a class="dropdown-item" routerLink="/member/edit">Edit Profile</a>
+        <a class="dropdown-item" (click)="Logout()">Logout</a>
+      </div>
     </div>
-  </nav>
-
+    <form *ngIf="!(accountService.currentUser$ | async)" #loginForm="ngForm" class="d-flex" (ngSubmit)="Login()"
+      autocomplete="off">
+      <input name="userName" [(ngModel)]="model.username" class="form-control me-2" type="text" placeholder="Username">
+      <input name="password" [(ngModel)]="model.password" class="form-control me-2" type="password"
+        placeholder="Password">
+      <button class="btn btn-success" type="submit">Login</button>
+    </form>
+  </div>
+</nav>
