--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngIf="member">
+<div class="row">
 
     <div class="col-4">
         <div class="card">
@@ -25,7 +25,7 @@
             <div class="card-footer">
                 <div class="btn-group d-flex">
                     <button class="btn-primary">Like</button>
-                    <button class="btn-success">Messages</button>
+                    <button (click)="selectTab('Messages')" class="btn-success">Messages</button>
                 </div>
             </div>
 
@@ -34,8 +34,8 @@
 
     </div>
     <div class="col-8">
-        <tabset class="member-tabset">
-            <tab heading="About {{member.knownAs}}">
+        <tabset class="member-tabset" #memberTabs>
+            <tab heading="About {{member.knownAs}}" (selectTab)="onTabActivated($event)">
                 <h4>
                     Description:
                 </h4>
@@ -43,21 +43,21 @@
                 <h4>Looking for</h4>
                 <p>{{member.lookingFor}}</p>
             </tab>
-            <tab heading="Interests">
+            <tab heading="Interests" (selectTab)="onTabActivated($event)">
                 <h4>
                     Interests
                 </h4>
                 <p>{{member.interests}}</p>
 
             </tab>
-            <tab heading="Photos">
+            <tab heading="Photos" (selectTab)="onTabActivated($event)">
                 <ngx-gallery [options]="galleryOptions" [images]="galleryImages" class="ngx-gallery"></ngx-gallery>
 
 
             </tab>
-            <tab heading="Messages">
+            <tab heading="Messages" (selectTab)="onTabActivated($event)">
 
-                <p>Messages will go here</p>
+                <app-member-messages [username]="member.userName"></app-member-messages>
 
             </tab>
         </tabset>
