--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -16,6 +16,9 @@
           <a class="nav-link " routerLink="/messages" routerLinkActive="active">Mesages</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link " routerLink="/admin" routerLinkActive="active">Admin</a>
+        </li>
+        <li *appHasRole="['Admin', 'Moderator']" class="nav-item">
           <a class="nav-link " (click)="Logout">Logout</a>
         </li>
       </ng-container>
